tests/ui/splat/splat-rust-call-type-issue-158800.stderr
error: `#[arg_splat]` is not allowed in the arguments of functions with the `rust-call` ABI
  --> $DIR/splat-rust-call-type-issue-158800.rs:11:5
   |
LL |     extern "rust-call" fn f(#[arg_splat] _: ());
   |     ^^^^^^^^^^^^^^^^^^      ^^^^^^^^^^^^
   |
   = help: remove `#[arg_splat]` or change the ABI

error: `#[arg_splat]` is not allowed in the arguments of functions with the `rust-call` ABI
  --> $DIR/splat-rust-call-type-issue-158800.rs:16:5
   |
LL |     extern "rust-call" fn f2(#[arg_splat] _: ()) {}
   |     ^^^^^^^^^^^^^^^^^^       ^^^^^^^^^^^^
   |
   = help: remove `#[arg_splat]` or change the ABI

error: `#[arg_splat]` is not allowed in the arguments of functions with the `rust-call` ABI
  --> $DIR/splat-rust-call-type-issue-158800.rs:21:5
   |
LL |     extern "rust-call" fn f(#[arg_splat] _: ()) {}
   |     ^^^^^^^^^^^^^^^^^^      ^^^^^^^^^^^^
   |
   = help: remove `#[arg_splat]` or change the ABI

error: aborting due to 3 previous errors

